@@ -1,4 +1,4 @@
-$Id: 564e285f617e05c82bb6ecf91727d10ecb8eeae1 $
+$Id: 1846f398826fdcf04b22c5f175298d41f0f679b1 $
 usage: socklog-check [-v] [unix [address]]
 
 1
